--- a/Trabalho-de-Front-main/Trabalho Lucas.html
+++ b/Trabalho-de-Front-main/Trabalho Lucas.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
+    <link rel="shortcut icon" href="favicon_io/favicon-16x16.png" type="image/x-icon">
+
     <title>Trabajo del CEEP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
-
+            <img src="favicon_io/favicon.ico" alt="logotipo Lucas">
 <h1>CEEP: Colégio Estadual de Educação Profissional</h1> <i><strong>Nome: Lucas Gabriel Morais Figueredo</strong></i>
 
     </header>
